feat: stable func, need support pointer and multiple params
