# pkg/model/model.go
@@ -1,0 +1,9 @@
+package model
+
+type Tony struct {
+	ID        int    `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+}
